Added hooking for DDrawCompat, DSoundCtrl and d3d8to9
- Added hooking for DDrawCompat, DSoundCtrl and d3d8to9
- Updated API hooking code and enabled HotPatch hooking
- Removed MinHook
- Fixed threading issue with config ParseCallback
- Renamed EnableStoppedDriverWorkaround to StoppedDriverWorkaround
- Removed Alpha channel for DDrawCompat becasue of application issues
(Diablo)
- Restructured dllmain.cpp and writememory.cpp
- Added GetFunctionAddress function to get function addresses from
binary file
- Updated how API names are shared in ddraw and d3d9 wrappers

--- a/allsettings.ini
+++ b/allsettings.ini
@@ -48,7 +48,7 @@ PrimaryBufferSamples     = 44100
 PrimaryBufferChannels    = 2
 ForceSpeakerConfig       = 0
 SpeakerConfig            = 6
-EnableStoppedDriverWorkaround = 0
+StoppedDriverWorkaround  = 0
 
 [AppCompatData]
 LockEmulation            = 0
@@ -64,7 +64,7 @@ RedirectPrimarySurfBlts  = 0
 StripBorderStyle         = 0
 DisableMaxWindowedMode   = 0
 
-[HotPatch]
+[WriteMemory]
 VerificationAddress      = 0x00000000
 VerificationBytes        = 0x00
 ResetMemoryAfter         = 0
