--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -112,6 +112,7 @@ copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\d3d9.dll"
 copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\d3d8.dll"
 copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\winmm.dll"
 copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\dsound.dll"
+copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\dinput.dll"
 copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\dxgi.dll"
 copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\dplayx.dll"
 copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\winspool.drv"
@@ -189,6 +190,7 @@ copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\d3d9.dll"
 copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\d3d8.dll"
 copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\winmm.dll"
 copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\dsound.dll"
+copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\dinput.dll"
 copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\dxgi.dll"
 copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\dplayx.dll"
 copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\winspool.drv"
@@ -257,6 +259,7 @@ copy /Y "$(ProjectDir)dgame.ini" "$(TargetDir)Build\dgame.ini"
     <ClCompile Include="wrappers\d3d8.cpp" />
     <ClCompile Include="wrappers\d3d9.cpp" />
     <ClCompile Include="wrappers\ddraw.cpp" />
+    <ClCompile Include="wrappers\dinput.cpp" />
     <ClCompile Include="wrappers\dplayx.cpp" />
     <ClCompile Include="wrappers\dsound.cpp" />
     <ClCompile Include="wrappers\dxgi.cpp" />
@@ -298,6 +301,7 @@ copy /Y "$(ProjectDir)dgame.ini" "$(TargetDir)Build\dgame.ini"
     <ClInclude Include="wrappers\d3d8.h" />
     <ClInclude Include="wrappers\d3d9.h" />
     <ClInclude Include="wrappers\ddraw.h" />
+    <ClInclude Include="wrappers\dinput.h" />
     <ClInclude Include="wrappers\dplayx.h" />
     <ClInclude Include="wrappers\dsound.h" />
     <ClInclude Include="wrappers\dxgi.h" />
