Auto Generate Build Number
- Update to automatically update the build number
- Fix issue with for loop to make sure it does not exceed the
dtypeArraySize

--- a/dxwrapper.rc
+++ b/dxwrapper.rc
@@ -54,8 +54,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 0,APP_MAJOR,APP_MINOR,APP_BUILDNUMBER
- PRODUCTVERSION 0,APP_MAJOR,APP_MINOR,APP_BUILDNUMBER
+ FILEVERSION APP_MAJOR, APP_MINOR, APP_BUILDNUMBER, APP_REVISION
+ PRODUCTVERSION APP_MAJOR, APP_MINOR, APP_BUILDNUMBER, APP_REVISION
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
