--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -167,7 +167,7 @@ copy /Y "$(ProjectDir)dgame.ini" "$(TargetDir)Build\dgame.ini"
     <Link>
       <OutputFile>$(OutDir)\dxwrapper.dll</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <ModuleDefinitionFile>.\dxwrapper.def</ModuleDefinitionFile>
+      <ModuleDefinitionFile>.\Dllmain\dxwrapper.def</ModuleDefinitionFile>
       <ProgramDatabaseFile />
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
       <DataExecutionPrevention />
@@ -193,31 +193,30 @@ copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\dsound.dll"
 copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\dinput.dll"
 copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\dxgi.dll"
 copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\dplayx.dll"
-copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\winspool.drv"
-copy /Y "$(ProjectDir)allsettings.ini" "$(TargetDir)Build\allsettings.ini"
-copy /Y "$(ProjectDir)dgame.ini" "$(TargetDir)Build\dgame.ini"
+copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\bcrypt.dll"
+copy /Y "$(ProjectDir)Settings\AllSettings.ini" "$(TargetDir)Build\"
+copy /Y "$(ProjectDir)Settings\Settings.ini" "$(TargetDir)Build\"
 </Command>
     </PostBuildEvent>
     <PreBuildEvent>
-      <Command>cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)"" &amp;&amp; if not exist BuildNo.rc echo #define BUILD_NUMBER 0 &gt;BuildNo.rc"
-cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)"" &amp;&amp; FOR /F "tokens=3" %%i IN (BuildNo.rc) DO set /a var=%%i+1 &gt;Build.txt"
-cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)"" &amp;&amp; FOR /F %%i IN (Build.txt) DO echo #define BUILD_NUMBER %%i &gt;BuildNo.rc"
-cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)"" &amp;&amp; del Build.txt"
-cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)"" &amp;&amp; type BuildNo.rc"</Command>
+      <Command>cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; if not exist BuildNo.rc echo #define BUILD_NUMBER 0 &gt;BuildNo.rc"
+cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; FOR /F "tokens=3" %%i IN (BuildNo.rc) DO set /a var=%%i+1 &gt;Build.txt"
+cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; FOR /F %%i IN (Build.txt) DO echo #define BUILD_NUMBER %%i &gt;BuildNo.rc"
+cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; del Build.txt"
+cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type BuildNo.rc"</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="cfg.cpp" />
-    <ClCompile Include="d3d8to9\d3d8to9.cpp" />
-    <ClCompile Include="d3d8to9\d3d8to9_base.cpp" />
-    <ClCompile Include="d3d8to9\d3d8to9_device.cpp" />
-    <ClCompile Include="d3d8to9\d3d8to9_index_buffer.cpp" />
-    <ClCompile Include="d3d8to9\d3d8to9_surface.cpp" />
-    <ClCompile Include="d3d8to9\d3d8to9_swap_chain.cpp" />
-    <ClCompile Include="d3d8to9\d3d8to9_texture.cpp" />
-    <ClCompile Include="d3d8to9\d3d8to9_vertex_buffer.cpp" />
-    <ClCompile Include="d3d8to9\d3d8to9_volume.cpp" />
-    <ClCompile Include="d3d8to9\d3d8types.cpp" />
+    <ClCompile Include="D3d8to9\d3d8to9.cpp" />
+    <ClCompile Include="D3d8to9\d3d8to9_base.cpp" />
+    <ClCompile Include="D3d8to9\d3d8to9_device.cpp" />
+    <ClCompile Include="D3d8to9\d3d8to9_index_buffer.cpp" />
+    <ClCompile Include="D3d8to9\d3d8to9_surface.cpp" />
+    <ClCompile Include="D3d8to9\d3d8to9_swap_chain.cpp" />
+    <ClCompile Include="D3d8to9\d3d8to9_texture.cpp" />
+    <ClCompile Include="D3d8to9\d3d8to9_vertex_buffer.cpp" />
+    <ClCompile Include="D3d8to9\d3d8to9_volume.cpp" />
+    <ClCompile Include="D3d8to9\d3d8types.cpp" />
     <ClCompile Include="DDrawCompat\v0.2.1\CompatActivateAppHandler.cpp" />
     <ClCompile Include="DDrawCompat\v0.2.1\CompatDirectDraw.cpp" />
     <ClCompile Include="DDrawCompat\v0.2.1\CompatDirectDrawPalette.cpp" />
@@ -244,10 +243,10 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)"" &amp;&amp; type BuildNo.rc"
     <ClCompile Include="DDrawCompat\v0.2.1\RealPrimarySurface.cpp" />
     <ClCompile Include="DDrawCompat\v0.2.1\Time.cpp" />
     <ClCompile Include="DDrawCompat\v0.2.1\UnmodifiedDDrawProcs.cpp" />
-    <ClCompile Include="disasm\cmdlist.c" />
-    <ClCompile Include="disasm\Disasm.c" />
-    <ClCompile Include="disasm\initdisasm.cpp" />
-    <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="Disasm\cmdlist.c" />
+    <ClCompile Include="Disasm\Disasm.c" />
+    <ClCompile Include="Disasm\initdisasm.cpp" />
+    <ClCompile Include="Dllmain\Dllmain.cpp" />
     <ClCompile Include="DSoundCtrl\DSoundCtrl.cpp" />
     <ClCompile Include="DSoundCtrl\IDirectSound3DBufferEx.cpp" />
     <ClCompile Include="DSoundCtrl\IDirectSound3DListenerEx.cpp" />
@@ -255,14 +254,15 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)"" &amp;&amp; type BuildNo.rc"
     <ClCompile Include="DSoundCtrl\IDirectSoundClassFactoryEx.cpp" />
     <ClCompile Include="DSoundCtrl\IDirectSoundEx.cpp" />
     <ClCompile Include="DxWnd\v2_03_60_src\init.cpp" />
-    <ClCompile Include="fullscreen.cpp" />
+    <ClCompile Include="Fullscreen\Fullscreen.cpp" />
     <ClCompile Include="hook\hotpatch.cpp" />
     <ClCompile Include="hook\iatpatch.cpp" />
     <ClCompile Include="hook\inithook.cpp" />
     <ClCompile Include="libraries\dwmapi.cpp" />
     <ClCompile Include="libraries\uxtheme.cpp" />
     <ClCompile Include="libraries\winmm.cpp" />
-    <ClCompile Include="utils.cpp" />
+    <ClCompile Include="Settings\Settings.cpp" />
+    <ClCompile Include="Utils\Utils.cpp" />
     <ClCompile Include="wrappers\d3d8.cpp" />
     <ClCompile Include="wrappers\d3d9.cpp" />
     <ClCompile Include="wrappers\ddraw.cpp" />
@@ -270,23 +270,58 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)"" &amp;&amp; type BuildNo.rc"
     <ClCompile Include="wrappers\dplayx.cpp" />
     <ClCompile Include="wrappers\dsound.cpp" />
     <ClCompile Include="wrappers\dxgi.cpp" />
+    <ClCompile Include="Wrappers\bcrypt.cpp" />
     <ClCompile Include="wrappers\winmm.cpp" />
-    <ClCompile Include="wrappers\winspool.cpp" />
     <ClCompile Include="wrappers\wrapper.cpp" />
-    <ClCompile Include="writememory\writememory.cpp" />
+    <ClCompile Include="WriteMemory\WriteMemory.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="allsettings.ini" />
-    <None Include="dgame.ini" />
-    <None Include="dxwrapper.def" />
+    <None Include="Dllmain\dxwrapper.def" />
+    <None Include="Settings\AllSettings.ini" />
+    <None Include="Settings\Settings.ini" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="d3d8to9\d3d8to9.hpp" />
-    <ClInclude Include="d3d8to9\d3d8types.hpp" />
-    <ClInclude Include="d3d8to9\d3dx9.hpp" />
-    <ClInclude Include="cfg.h" />
-    <ClInclude Include="disasm\initdisasm.h" />
-    <ClInclude Include="dllmain.h" />
+    <ClInclude Include="D3d8to9\d3d8to9.hpp" />
+    <ClInclude Include="D3d8to9\d3d8types.hpp" />
+    <ClInclude Include="D3d8to9\d3dx9.hpp" />
+    <ClInclude Include="DDrawCompat\v0.2.1\CompatActivateAppHandler.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\CompatDirectDraw.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\CompatDirectDrawPalette.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\CompatDirectDrawSurface.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\CompatGdi.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\CompatGdiCaret.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\CompatGdiDc.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\CompatGdiDcCache.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\CompatGdiDcFunctions.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\CompatGdiPaintHandlers.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\CompatGdiScrollBar.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\CompatGdiScrollFunctions.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\CompatGdiTitleBar.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\CompatGdiWinProc.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\CompatPaletteConverter.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\CompatPrimarySurface.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\CompatRegistry.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\CompatVtable.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\Config.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\DDrawCompatExternal.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\DDrawLog.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\DDrawProcs.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\DDrawRepository.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\DDrawScopedThreadLock.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\DDrawTypes.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\DDrawVtableVisitor.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\DirectDrawPaletteVtblVisitor.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\DirectDrawSurfaceVtblVisitor.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\DirectDrawVtblVisitor.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\Hook.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\IReleaseNotifier.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\RealPrimarySurface.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\ScopedCriticalSection.h" />
+    <ClInclude Include="DDrawCompat\v0.2.1\Time1.h" />
+    <ClInclude Include="Disasm\disasm.h" />
+    <ClInclude Include="Disasm\initdisasm.h" />
+    <ClInclude Include="Dllmain\Dllmain.h" />
+    <ClInclude Include="Dllmain\dxwrapper.h" />
     <ClInclude Include="DSoundCtrl\dsound.h" />
     <ClInclude Include="DSoundCtrl\DSoundCtrl.h" />
     <ClInclude Include="DSoundCtrl\DSoundCtrlExternal.h" />
@@ -296,15 +331,17 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)"" &amp;&amp; type BuildNo.rc"
     <ClInclude Include="DSoundCtrl\IDirectSoundBufferEx.h" />
     <ClInclude Include="DSoundCtrl\IDirectSoundClassFactoryEx.h" />
     <ClInclude Include="DSoundCtrl\IDirectSoundEx.h" />
-    <ClInclude Include="dxwrapper.h" />
-    <ClInclude Include="fullscreen.h" />
+    <ClInclude Include="DxWnd\v2_03_60_src\dxwnd.h" />
+    <ClInclude Include="DxWnd\v2_03_60_src\DxWndExternal.h" />
+    <ClInclude Include="Fullscreen\Fullscreen.h" />
     <ClInclude Include="hook\hotpatch.h" />
     <ClInclude Include="hook\iatpatch.h" />
     <ClInclude Include="hook\inithook.h" />
     <ClInclude Include="libraries\dwmapi.h" />
     <ClInclude Include="libraries\uxtheme.h" />
     <ClInclude Include="libraries\winmm.h" />
-    <ClInclude Include="utils.h" />
+    <ClInclude Include="Settings\Settings.h" />
+    <ClInclude Include="Utils\Utils.h" />
     <ClInclude Include="wrappers\d3d8.h" />
     <ClInclude Include="wrappers\d3d9.h" />
     <ClInclude Include="wrappers\ddraw.h" />
@@ -312,19 +349,14 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)"" &amp;&amp; type BuildNo.rc"
     <ClInclude Include="wrappers\dplayx.h" />
     <ClInclude Include="wrappers\dsound.h" />
     <ClInclude Include="wrappers\dxgi.h" />
+    <ClInclude Include="Wrappers\bcrypt.h" />
     <ClInclude Include="wrappers\winmm.h" />
-    <ClInclude Include="wrappers\winspool.h" />
     <ClInclude Include="wrappers\wrapper.h" />
-    <ClInclude Include="writememory\writememory.h" />
+    <ClInclude Include="WriteMemory\WriteMemory.h" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="BuildNo.rc" />
-    <ResourceCompile Include="dxwrapper.rc">
-      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-      </AdditionalIncludeDirectories>
-      <IgnoreStandardIncludePath Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-      </IgnoreStandardIncludePath>
-    </ResourceCompile>
+    <ResourceCompile Include="Dllmain\BuildNo.rc" />
+    <ResourceCompile Include="Dllmain\dxwrapper.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
