--- a/dxwrapper.vcxproj.filters
+++ b/dxwrapper.vcxproj.filters
@@ -494,7 +494,7 @@
     <ClInclude Include="Libraries\d3dx9.h">
       <Filter>Libraries</Filter>
     </ClInclude>
-    <ClInclude Include="D3d8to9\lookup_table.h">
+    <ClInclude Include="D3d8to9\lookup_table.hpp">
       <Filter>D3d8to9</Filter>
     </ClInclude>
   </ItemGroup>
